--- a/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -3,7 +3,6 @@
   "ibeeditor.key.editor": "Ouvrir l'éditeur",
   "ibeeditor.key.nbt_editor": "Ouvrir l'éditeur NBT",
   "ibeeditor.key.snbt_editor": "Ouvrir l'éditeur SNBT",
-  "ibeeditor.key.bookmarks": "Ouvrir les favoris",
   "ibeeditor.gui.editor_title": "Editeur de %s",
   "ibeeditor.gui.settings": "Paramètres",
   "ibeeditor.gui.switch_nbt_editor": "Passer en mode visuel",
@@ -117,5 +116,38 @@
   "ibeeditor.message.success_update": "%s mis à jour!",
   "ibeeditor.message.no_target_found": "Aucun %s modifiable détecté",
   "ibeeditor.message.error_generic": "Une erreur est survenue. Merci de regarder les logs pour plus de détails et de rapporter cette erreur au créateur du mod.",
-  "ibeeditor.message.not_implemented": "L'éditeur de %s n'est pas encore implémenté et viendra dans une prochaine mise à jour."
+  "ibeeditor.message.not_implemented": "L'éditeur de %s n'est pas encore implémenté et viendra dans une prochaine mise à jour.",
+  "ibeeditor.key.vault": "Ouvrir les favoris",
+  "ibeeditor.gui.enchantment": "Enchantement",
+  "ibeeditor.gui.spawn_egg": "Œuf d'apparition",
+  "ibeeditor.gui.block_state": "Block State",
+  "ibeeditor.gui.container": "Conteneur",
+  "ibeeditor.gui.lock_code": "Code de verrouillage",
+  "ibeeditor.gui.health": "Vie",
+  "ibeeditor.gui.always_show_name": "Toujours afficher le nom",
+  "ibeeditor.gui.invulnerable": "Invulnérable",
+  "ibeeditor.gui.silent": "Silencieux",
+  "ibeeditor.gui.no_gravity": "Pas de gravité",
+  "ibeeditor.gui.glowing": "Brillant",
+  "ibeeditor.gui.fire": "Durée du feu",
+  "ibeeditor.gui.save_vault": "Sauvegarder en favori",
+  "ibeeditor.gui.saved_vault.0": "Le %s sera sauvegardé en favori",
+  "ibeeditor.gui.saved_vault.1": "après application des changements.",
+  "ibeeditor.gui.saved_vault.2": "",
+  "ibeeditor.gui.saved_vault.3": "Ré-appuyer pour annuler.",
+  "ibeeditor.gui.edit": "Modifier",
+  "ibeeditor.gui.common": "Commun",
+  "ibeeditor.gui.permission_level": "Niveau de permission",
+  "ibeeditor.gui.creative_only": "Mode créatif seulement",
+  "ibeeditor.gui.level": "Niveau",
+  "ibeeditor.gui.copy_command": "Copier la commande %s dans le presse-papiers",
+  "ibeeditor.gui.copy_command_alt": "Copier la commande",
+  "ibeeditor.gui.command_copied.0": "La commande %s sera copiée",
+  "ibeeditor.gui.command_copied.1": "après application des changements.",
+  "ibeeditor.gui.command_copied.2": "",
+  "ibeeditor.gui.command_copied.3": "Ré-appuyer pour annuler.",
+  "ibeeditor.text.vault": "Favoris",
+  "ibeeditor.message.saved_vault": "%s sauvegardé dans les favoris!",
+  "ibeeditor.message.not_saved_vault": "%s déjà sauvegardé dans les favoris.",
+  "ibeeditor.message.copied_clipboard": "Commande %s copiée dans le presse-papier!"
 }
