feat: wrap and format SNBT text (#27)

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -138,6 +138,7 @@
   "ibeeditor.gui.command_copied.2": "",
   "ibeeditor.gui.command_copied.3": "Press again to cancel.",
   "ibeeditor.gui.give": "Give %s",
+  "ibeeditor.gui.format": "Format text",
   "ibeeditor.text.item": "Item",
   "ibeeditor.text.block": "Block",
   "ibeeditor.text.entity": "Entity",
