--- a/common/src/main/resources/assets/ibeeditor/lang/zh_cn.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/zh_cn.json
@@ -60,7 +60,7 @@
   "ibeeditor.gui.item_id": "物品ID",
   "ibeeditor.gui.choose": "选择%s…",
   "ibeeditor.gui.count": "数量",
-  "ibeeditor.gui.damage": "伤害",
+  "ibeeditor.gui.damage": "损害耐久",
   "ibeeditor.gui.custom_name": "自定义名称",
   "ibeeditor.gui.lore": "Lore #%s",
   "ibeeditor.gui.lore_add": "Lore",
@@ -99,7 +99,7 @@
   "ibeeditor.gui.potion_color": "药水颜色",
   "ibeeditor.gui.potion": "药水",
   "ibeeditor.gui.effect": "效果",
-  "ibeeditor.gui.amplifier": "放大器（0代表1级，以此类推）",
+  "ibeeditor.gui.amplifier": "增幅（0代表1级，以此类推）",
   "ibeeditor.gui.duration": "持续时间（以tick为单位）",
   "ibeeditor.gui.ambient": "环境（更透明的粒子效果）",
   "ibeeditor.gui.show_particles": "显示粒子",
