--- a/common/src/main/resources/assets/ibeeditor/lang/ru_ru.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/ru_ru.json
@@ -3,7 +3,7 @@
   "ibeeditor.key.editor": "Открыть редактор",
   "ibeeditor.key.nbt_editor": "Открыть редактор NBT",
   "ibeeditor.key.snbt_editor": "Открыть редактор SNBT",
-  "ibeeditor.key.bookmarks": "Открыть буфер обмена",
+  "ibeeditor.key.vault": "Открыть хранилище",
   "ibeeditor.gui.editor_title": "Редактор %s",
   "ibeeditor.gui.settings": "Настройки",
   "ibeeditor.gui.switch_nbt_editor": "Переключить на редактор NBT",
@@ -20,7 +20,8 @@
   "ibeeditor.gui.zoom_reset": "Сброс",
   "ibeeditor.gui.zoom_out": "Уменьшить",
   "ibeeditor.gui.zoom_in": "Увеличить",
-  "ibeeditor.gui.add_tag": "Добавить тег типа %s",
+  "ibeeditor.gui.add_tag": "Добавить тег %s",
+  "ibeeditor.gui.close_without_saving": "Закрыть без сохранения",
   "ibeeditor.gui.save": "Сохранить",
   "ibeeditor.gui.bold": "Полужирный",
   "ibeeditor.gui.italic": "Курсив",
@@ -44,14 +45,14 @@
   "ibeeditor.gui.light_purple": "Сиреневый",
   "ibeeditor.gui.yellow": "Жёлтый",
   "ibeeditor.gui.white": "Белый",
-  "ibeeditor.gui.choose_custom_color": "Указать пользовательский цвет",
   "ibeeditor.gui.remove_custom_color": "Сбросить пользовательский цвет",
-  "ibeeditor.gui.custom_color": "Пользовательский цвет",
+  "ibeeditor.gui.custom_color": "пользовательский цвет",
   "ibeeditor.gui.fix_errors": "Исправьте ошибки перед сохранением изменений.",
   "ibeeditor.gui.reset": "Сброс",
   "ibeeditor.gui.search": "Поиск...",
   "ibeeditor.gui.general": "Основные",
   "ibeeditor.gui.display": "Отображение",
+  "ibeeditor.gui.enchantment": "Зачарование",
   "ibeeditor.gui.enchantments": "Чары",
   "ibeeditor.gui.attribute_modifiers": "Модификаторы атрибутов",
   "ibeeditor.gui.modifier": "Модификатор",
@@ -74,9 +75,9 @@
   "ibeeditor.gui.chest": "Нагрудник",
   "ibeeditor.gui.head": "Голова",
   "ibeeditor.gui.operation": "Операция: %s",
-  "ibeeditor.gui.operation.0": "Прибавить",
-  "ibeeditor.gui.operation.1": "Прибавить в процентах",
-  "ibeeditor.gui.operation.2": "Множитель",
+  "ibeeditor.gui.operation.0": "Прибавить (0)",
+  "ibeeditor.gui.operation.1": "Прибавить в процентах (1)",
+  "ibeeditor.gui.operation.2": "Множитель (2)",
   "ibeeditor.gui.amount": "Значение",
   "ibeeditor.gui.hide": "Скрыть %s",
   "ibeeditor.gui.unbreakable": "Неразрушимый",
@@ -103,18 +104,54 @@
   "ibeeditor.gui.show_particles": "Отображать частицы",
   "ibeeditor.gui.show_icon": "Показывать иконку",
   "ibeeditor.gui.armor_color": "Цвет брони",
+  "ibeeditor.gui.spawn_egg": "Яйцо призыва",
+  "ibeeditor.gui.block_state": "Состояние блока",
+  "ibeeditor.gui.container": "Хранилище",
+  "ibeeditor.gui.lock_code": "Кодовый замок",
+  "ibeeditor.gui.health": "Здоровье",
+  "ibeeditor.gui.always_show_name": "Всегда отображать имя",
+  "ibeeditor.gui.invulnerable": "Неуязвимый",
+  "ibeeditor.gui.silent": "Беззвучный",
+  "ibeeditor.gui.no_gravity": "Без гравитации",
+  "ibeeditor.gui.glowing": "Светящийся",
+  "ibeeditor.gui.fire": "Время горения",
+  "ibeeditor.gui.save_vault": "Сохранить в хранилище",
+  "ibeeditor.gui.saved_vault.0": "%s будет сохранен в хранилище",
+  "ibeeditor.gui.saved_vault.1": "после внесения изменений.",
+  "ibeeditor.gui.saved_vault.2": "",
+  "ibeeditor.gui.saved_vault.3": "Нажмите еще раз, чтобы отменить.",
+  "ibeeditor.gui.edit": "Редактировать",
   "ibeeditor.gui.client": "Клиент",
   "ibeeditor.gui.theme": "Тема",
   "ibeeditor.gui.debug_mode": "Режим отладки",
+  "ibeeditor.gui.selection_screen_max_items": "Макс. кол-во предметов на экране выбора",
+  "ibeeditor.gui.common": "Общие",
+  "ibeeditor.gui.permission_level": "Уровень прав",
+  "ibeeditor.gui.creative_only": "Только в творческом режиме",
   "ibeeditor.gui.reload_config": "Перезагрузить настройки с диска",
+  "ibeeditor.gui.level": "Уровень",
+  "ibeeditor.gui.copy_command": "Скопировать команду %s в буфер обмена",
+  "ibeeditor.gui.copy_command_alt": "Скопировать команду",
+  "ibeeditor.gui.command_copied.0": "Команда %s будет скопирована",
+  "ibeeditor.gui.command_copied.1": "после внесения изменений.",
+  "ibeeditor.gui.command_copied.2": "",
+  "ibeeditor.gui.command_copied.3": "Нажмите еще раз, чтобы отменить.",
+  "ibeeditor.gui.give": "Выдать %s",
+  "ibeeditor.gui.format": "Форматирование текста",
   "ibeeditor.text.item": "Предмет",
   "ibeeditor.text.block": "Блок",
   "ibeeditor.text.entity": "Сущность",
+  "ibeeditor.text.vault": "Хранилище",
   "ibeeditor.message.prefix": "[IBE Editor] ",
-  "ibeeditor.message.error_permission_denied": "Вы должны быть в творческом режиме, чтобы обновить %s.",
+  "ibeeditor.message.error_permission_denied": "У вас нет разрешения на обновление %s.",
   "ibeeditor.message.error_server_mod": "IBE Editor должен быть установлен на сервере, чтобы обновить %s.",
-  "ibeeditor.message.success_update": "%s Данные обновлены",
-  "ibeeditor.message.no_target_found": "%s Данных для редактирования не обнаружено.",
+  "ibeeditor.message.success_update": "%s обновлен(а)",
+  "ibeeditor.message.no_target_found": "%s-данных для редактирования не обнаружено.",
   "ibeeditor.message.error_generic": "Произошла ошибка. Пожалуйста, проверьте логи для получения более подробной информации и сообщите о проблеме автору мода.",
-  "ibeeditor.message.not_implemented": "Редактор %s ещё не реализован и появится в следующих обновлениях."
+  "ibeeditor.message.not_implemented": "Редактор %s ещё не реализован и появится в следующих обновлениях.",
+  "ibeeditor.message.saved_vault": "%s сохранен в хранилище!",
+  "ibeeditor.message.not_saved_vault": "%s уже сохранен в хранилище.",
+  "ibeeditor.message.copied_clipboard": "Команда %s скопирована в буфер обмена!",
+  "ibeeditor.message.no_block_data": "Данные NBT для этого блока не найдены.",
+  "ibeeditor.message.vault_item_give_success": "Предмет из хранилища выдан успешно!"
 }
