Update zh_cn lang

--- a/common/src/main/resources/assets/ibeeditor/lang/zh_cn.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/zh_cn.json
@@ -1,21 +1,21 @@
 {
-  "ibeeditor": "IBE Editor",
+  "ibeeditor": "IBE编辑器",
   "ibeeditor.key.editor": "打开编辑器",
   "ibeeditor.key.nbt_editor": "打开NBT编辑器",
   "ibeeditor.key.snbt_editor": "打开SNBT编辑器",
-  "ibeeditor.key.bookmarks": "打开剪贴板",
+  "ibeeditor.key.vault": "打开保险库",
   "ibeeditor.gui.editor_title": "%s编辑器",
   "ibeeditor.gui.settings": "设置",
   "ibeeditor.gui.switch_nbt_editor": "切换到NBT编辑器",
   "ibeeditor.gui.move_up": "上移",
   "ibeeditor.gui.move_down": "下移",
   "ibeeditor.gui.add": "添加%s",
-  "ibeeditor.gui.remove": "移除",
+  "ibeeditor.gui.remove": "删除",
   "ibeeditor.gui.cut": "剪切",
   "ibeeditor.gui.copy": "复制",
   "ibeeditor.gui.paste": "粘贴",
-  "ibeeditor.gui.collapse": "折叠全部",
-  "ibeeditor.gui.expand": "展开全部",
+  "ibeeditor.gui.collapse": "全部折叠",
+  "ibeeditor.gui.expand": "全部展开",
   "ibeeditor.gui.scroll_focused": "滚动到重点",
   "ibeeditor.gui.zoom_reset": "重置缩放",
   "ibeeditor.gui.zoom_out": "缩小",
@@ -42,28 +42,28 @@
   "ibeeditor.gui.green": "绿色",
   "ibeeditor.gui.aqua": "青色",
   "ibeeditor.gui.red": "红色",
-  "ibeeditor.gui.light_purple": "亮紫色",
+  "ibeeditor.gui.light_purple": "紫色",
   "ibeeditor.gui.yellow": "黄色",
   "ibeeditor.gui.white": "白色",
   "ibeeditor.gui.remove_custom_color": "删除自定义颜色",
   "ibeeditor.gui.custom_color": "自定义颜色",
   "ibeeditor.gui.fix_errors": "你必须在应用更改之前修复错误。",
   "ibeeditor.gui.reset": "重置",
-  "ibeeditor.gui.search": "搜索……",
-  "ibeeditor.gui.general": "一般",
+  "ibeeditor.gui.search": "搜索...",
+  "ibeeditor.gui.general": "通用",
   "ibeeditor.gui.display": "显示",
   "ibeeditor.gui.enchantment": "附魔",
   "ibeeditor.gui.enchantments": "附魔",
-  "ibeeditor.gui.attribute_modifiers": "属性修改",
-  "ibeeditor.gui.modifier": "修改",
-  "ibeeditor.gui.hide_flags": "隐藏标签",
+  "ibeeditor.gui.attribute_modifiers": "属性修饰词",
+  "ibeeditor.gui.modifier": "修饰词",
+  "ibeeditor.gui.hide_flags": "隐藏标记",
   "ibeeditor.gui.item_id": "物品ID",
-  "ibeeditor.gui.choose": "选择%s…",
+  "ibeeditor.gui.choose": "选择%s...",
   "ibeeditor.gui.count": "数量",
-  "ibeeditor.gui.damage": "损害耐久",
+  "ibeeditor.gui.damage": "已损耐久",
   "ibeeditor.gui.custom_name": "自定义名称",
-  "ibeeditor.gui.lore": "Lore #%s",
-  "ibeeditor.gui.lore_add": "Lore",
+  "ibeeditor.gui.lore": "提示 #%s",
+  "ibeeditor.gui.lore_add": "提示",
   "ibeeditor.gui.level_add": "%s级",
   "ibeeditor.gui.attribute_name": "属性名称",
   "ibeeditor.gui.attribute": "属性",
@@ -76,21 +76,21 @@
   "ibeeditor.gui.head": "头盔",
   "ibeeditor.gui.all": "全部",
   "ibeeditor.gui.operation": "操作：%s",
-  "ibeeditor.gui.operation.0": "加法(0)",
-  "ibeeditor.gui.operation.1": "乘法基数(1)",
-  "ibeeditor.gui.operation.2": "乘法(2)",
+  "ibeeditor.gui.operation.0": "加法 (0)",
+  "ibeeditor.gui.operation.1": "乘法基数 (1)",
+  "ibeeditor.gui.operation.2": "乘法 (2)",
   "ibeeditor.gui.amount": "数量",
   "ibeeditor.gui.hide": "隐藏%s",
   "ibeeditor.gui.unbreakable": "无法破坏",
   "ibeeditor.gui.can_destroy": "可以破坏",
-  "ibeeditor.gui.can_place_on": "可以放在",
-  "ibeeditor.gui.other": "其它",
+  "ibeeditor.gui.can_place_on": "可放置在",
+  "ibeeditor.gui.other": "其他",
   "ibeeditor.gui.dyed": "染色",
   "ibeeditor.gui.hide_other_tooltip.0": "隐藏：",
   "ibeeditor.gui.hide_other_tooltip.1": "- 药水效果",
   "ibeeditor.gui.hide_other_tooltip.2": "- 盾牌图案",
   "ibeeditor.gui.hide_other_tooltip.3": "- 附魔书附魔",
-  "ibeeditor.gui.hide_other_tooltip.4": "- 成书作者和“原稿”/“副本”",
+  "ibeeditor.gui.hide_other_tooltip.4": "- 成书作者：“原稿”和“副本”",
   "ibeeditor.gui.hide_other_tooltip.5": "- 爆炸数据",
   "ibeeditor.gui.hide_other_tooltip.6": "- 烟花数据",
   "ibeeditor.gui.hide_other_tooltip.7": "- 地图提示",
@@ -99,29 +99,59 @@
   "ibeeditor.gui.potion_color": "药水颜色",
   "ibeeditor.gui.potion": "药水",
   "ibeeditor.gui.effect": "效果",
-  "ibeeditor.gui.amplifier": "增幅（0代表1级，以此类推）",
+  "ibeeditor.gui.amplifier": "等级（0 = 1级，以此类推）",
   "ibeeditor.gui.duration": "持续时间（以tick为单位）",
   "ibeeditor.gui.ambient": "环境（更透明的粒子效果）",
   "ibeeditor.gui.show_particles": "显示粒子",
   "ibeeditor.gui.show_icon": "显示图标",
-  "ibeeditor.gui.armor_color": "护甲颜色",
+  "ibeeditor.gui.armor_color": "盔甲颜色",
+  "ibeeditor.gui.spawn_egg": "刷怪蛋",
+  "ibeeditor.gui.block_state": "方块状态",
+  "ibeeditor.gui.container": "容器",
+  "ibeeditor.gui.lock_code": "密码锁",
+  "ibeeditor.gui.health": "生命值",
+  "ibeeditor.gui.always_show_name": "始终显示名称",
+  "ibeeditor.gui.invulnerable": "绝对防御",
+  "ibeeditor.gui.silent": "静音",
+  "ibeeditor.gui.no_gravity": "无重力",
+  "ibeeditor.gui.glowing": "发光",
+  "ibeeditor.gui.fire": "燃烧时间",
+  "ibeeditor.gui.save_vault": "保存到保险库",
+  "ibeeditor.gui.saved_vault.0": "保存更改后，%s将会被保存到保险库中。",
+  "ibeeditor.gui.saved_vault.1": "",
+  "ibeeditor.gui.saved_vault.2": "",
+  "ibeeditor.gui.saved_vault.3": "再点击一次即可取消。",
+  "ibeeditor.gui.edit": "编辑",
   "ibeeditor.gui.client": "客户端",
   "ibeeditor.gui.theme": "主题",
   "ibeeditor.gui.debug_mode": "调试模式",
-  "ibeeditor.gui.selection_screen_max_items": "选择屏幕最大物品数",
+  "ibeeditor.gui.selection_screen_max_items": "选择最大物品数量",
   "ibeeditor.gui.common": "通用",
   "ibeeditor.gui.permission_level": "权限等级",
   "ibeeditor.gui.creative_only": "仅限创造",
-  "ibeeditor.gui.reload_config": "重新加载配置文件",
+  "ibeeditor.gui.reload_config": "重载配置文件",
   "ibeeditor.gui.level": "等级",
+  "ibeeditor.gui.copy_command": "复制%s命令到剪贴板",
+  "ibeeditor.gui.copy_command_alt": "复制命令",
+  "ibeeditor.gui.command_copied.0": "保存更改后，%s命令将会被复制，",
+  "ibeeditor.gui.command_copied.1": "",
+  "ibeeditor.gui.command_copied.2": "",
+  "ibeeditor.gui.command_copied.3": "再点击一次即可取消。",
+  "ibeeditor.gui.give": "给予%s",
+  "ibeeditor.gui.format": "格式化文本",
   "ibeeditor.text.item": "物品",
   "ibeeditor.text.block": "方块",
   "ibeeditor.text.entity": "实体",
-  "ibeeditor.message.error_creative_mode": "您必须处于创造模式才能更新此%s。",
-  "ibeeditor.message.error_server_mod": "必须在服务器上安装IBE Editor才能更新此%s。",
+  "ibeeditor.text.vault": "保险库",
+  "ibeeditor.message.error_permission_denied": "你没有更新%s所需要的权限。",
+  "ibeeditor.message.error_server_mod": "必须在服务器上也安装IBE编辑器才能更新%s。",
   "ibeeditor.message.success_update": "%s已更新！",
-  "ibeeditor.message.no_target_found": "找不到可编辑的%s",
-  "ibeeditor.message.error_generic": "发生错误。请查看日志以获取更多详细信息，并将问题报告给mod作者。",
-  "ibeeditor.message.not_implemented": "%s的编辑器尚未实现，将在未来的版本中推出。",
-  "ibeeditor.message.no_permission": "你没有使用编辑器的权限。"
+  "ibeeditor.message.no_target_found": "未找到可编辑的%s。",
+  "ibeeditor.message.error_generic": "发生一个错误，请检查日志了解更多信息并向本模组作者报告该问题。",
+  "ibeeditor.message.not_implemented": "%s暂时不能在编辑器中操作，将会在未来版本中更新！",
+  "ibeeditor.message.saved_vault": "%s已保存在保险库中！",
+  "ibeeditor.message.not_saved_vault": "保险库中已存在%s。",
+  "ibeeditor.message.copied_clipboard": "%s命令被复制到剪贴板中！",
+  "ibeeditor.message.no_block_data": "未发现该方块的NBT数据。",
+  "ibeeditor.message.vault_item_give_success": "成功获得保险库中的物品！"
 }
