feat: 1.20.4 update, added Armor Trims hide flag, fixed unremovable lore bug

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -86,6 +86,7 @@
   "ibeeditor.gui.can_place_on": "Can Place On",
   "ibeeditor.gui.other": "Other",
   "ibeeditor.gui.dyed": "Dyed",
+  "ibeeditor.gui.armor_trims": "Armor Trims",
   "ibeeditor.gui.hide_other_tooltip.0": "Hides:",
   "ibeeditor.gui.hide_other_tooltip.1": "- Potion effects",
   "ibeeditor.gui.hide_other_tooltip.2": "- Shield pattern",
